--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,10 @@
 version: '3.7'
 
 services:
-  api-polycron:
-    container_name: api-polycron
+  api-assinatura:
+    container_name: api-assinatura
     build:
       dockerfile: Dockerfile
-    environment:
-      Database_Name: "Polycron"
-      Database_Host: "server.polycron.com.br, 2354"
-      Database_Username: "sa"
-      Database_Password: "P@ssword00"
     image: api-polycron:latest
     restart: unless-stopped
     volumes:
